# lfs-scripts

./: Makefile  README.md  apply-etc-data.sh  apply-package-data.sh  apply-system-data.sh  find-new-files.sh  gather-etc-data.sh  gather-home-data.sh  gather-package-data.sh  gather-system-data.sh
doc/: cfgc.md  kernel.md  mail.md  packages.md
doc/lfs-2015/: blfs.md  chapter4.md  chapter5.md  chapter6.md  chapter7.md  postgres.md  x.md
etc/: bashrc  profile  suid-programs
etc/pkgusr/: bashrc
etc/profile.d/: dircolors.sh  extrapaths.sh
fs/etc/: bash_profile  bashrc  suid-programs  syslog.conf  tpkgs.conf
fs/etc/pkgusr/: bash_profile
fs/etc/profile.d/: dircolors.sh
fs/home/.icewm/: create-ebooks-list.sh  create-mounts-list.sh  create-packages-list.sh  ebooks  games  keys  menu  mounts  preferences  processes.sh  programs  system
fs/sbin/: find-non-pacakaged-files.sh  find-unowned-files.sh  umount-crypto
fs/usr/sbin/: add_package_user  apply-suid.sh  ch-install-name  de-mk-install-dir.sh  find-illegal-root-files  grep-current-packages-from-xorg.sh  install-xorg-font.sh  (+20 more)
home/.icewm/: create-mounts-list.sh  games  keys  programs  system  theme  toolbar  winoptions
patches/: acl-install-without-chown-and-chmod.patch  attr-install-without-chown-and-chmod.patch  coreutils-8.12-pkg-install.patch  coreutils-8.24-pkg-install.patch  fam-2.7.0-buildfixes.patch  git-2.5.0-man-pages-installation.patch  guile-2.0.11-include-poll.h.patch  man-db-install-without-redundant-manpages.patch  shadow-install-without-redundant-manpages.patch  vim-install-without-redundant-manpages.patch
tpkgs/: CMakeLists.txt
tpkgs/cmake/: FindPOPT.cmake
tpkgs/src/: CMakeLists.txt  Config.cpp  Config.h  DiffVersions.cpp  DiffVersions.h  File.cpp  File.h  FindFiles.cpp  FindFiles.h  FindFilesInInstallDirs.cpp  FindFilesInInstallDirs.h  FindFilesInMappedDirs.cpp  FindFilesInMappedDirs.h  FindFilesOnInstallDevice.cpp  FindFilesOnInstallDevice.h  InstallItem.cpp  InstallItem.h  MMap.cpp  MMap.h  MXOSet.cpp  MXOSet.h  Package.cpp  Package.h  Popt.cpp  Popt.h  RecursiveFileIterator.h  TPKGS.cpp  TPKGS.h  Version.cpp  Version.h  main.cpp
usr/sbin/: add_package_user  install-xorg-app.sh  install-xorg-lib.sh  make-install-dir  move-files-from-jana-to-thomas.sh
(+161 files in other folders)
